fixed contrast issue with skill bars in mobile

--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -1,6 +1,7 @@
 @media only screen and (max-device-width: 649px)  {
 
     body{
+        position:relative;
         overflow-x:hidden;
         width:100%;
         -webkit-box-sizing: border-box;
@@ -31,6 +32,16 @@
         font-family:Plexifont;
 
     }
+    #about {
+        background: #fff; /* For browsers that do not support gradients */
+        background: -webkit-linear-gradient(#a5a5a5, #fff); /* For Safari 5.1 to 6.0 */
+        background: -o-linear-gradient(#a5a5a5, #fff); /* For Opera 11.1 to 12.0 */
+        background: -moz-linear-gradient(#a5a5a5,#fff); /* For Firefox 3.6 to 15 */
+        background: linear-gradient(#a5a5a5, #fff); /* Standard syntax */
+        color:black;
+        padding-bottom:500px;
+    }
+
 
     #about-header-section {
         position:relative;
@@ -164,6 +175,10 @@
         width:80%;
         padding:20px 15px;
 
+    }
+    #work-section { 
+        color:black;
+        background: #fff; /* For browsers that do not support gradients */
     }
     #work-header {
         font-size:90px;
